--- a/core - Copy.css
+++ b/core - Copy.css
@@ -560,6 +560,15 @@ The 2 items above are not owned by me, They go to there respected owners
 		border-bottom: 2px solid var(--primary3-colour); 
 		height: 30px
 	}
+	#app-mount .typeWindows-1za-n7:after {
+		content: "GGO Kirito v1.2.2 By VaporousCreeper";
+		color: rgb(255,255,255,0.0);
+		font-weight: 500;
+
+		position: absolute;
+		top: 8px;
+		left: 43.2%;
+	}
 
 	#app-mount .wordmark-2iDDfm {top: 3.3px;}
 	#app-mount .winButton-iRh8-Z {top: 1px;}
